alignment fix on select component

--- a/ui/select.reel/select.css
+++ b/ui/select.reel/select.css
@@ -20,7 +20,7 @@
     height: 2em;
     width: 100%;
     text-align: left;
-    padding: 0 2.5em .1em .5em;
+    padding: 0 2.5em .2em .5em;
     border-radius: 4px;
     background: rgba(0, 0, 0, .25);
     border-top:     1px solid rgba(0, 0, 0, .23);
